@@ -13,6 +13,7 @@ SimGrid (2.95) unstable; urgency=low
   * bugfix in automatic type parsing: differentiate the types "char[22]"
     and "unsigned char[22]". "short" and "long" modifiers were also ignored;
     other modifier (such as reference level) are still ignored. [MQ]
+  * Real (even if simplistic) implementation of gras_os_myname() on RL [MQ]
   
  -- 
 
